feat: Transform to Intellact learning platform with professional UI
- Rebrand from Soft UI to Intellact learning platform
- Update theme colors to professional navy (#2D3561)
- Complete redesign of Home screen with Udemy-style interface
- Add Firebase authentication integration
- Create Login/Signup screens with validation
- Redesign Welcome screen with animated logo
- Professional Profile screen with clean design
- Add working Edit Profile functionality with form validation
- Create My Courses screen with enrolled/completed tabs
- Implement protected navigation with auth awareness
- Remove emojis and add professional typography
- Add production-ready mobile optimizations
- All touch targets meet accessibility standards (44-56px)
- Native TextInput for proper mobile keyboard handling
- Comprehensive error handling and loading states

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,37 @@ web-build/
 
 package-lock.json
 yarn.lock
+
+# Environment variables - CRITICAL
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Firebase config - keep this if it has sensitive keys
+# src/services/firebase.ts
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Logs
+logs/
+*.log
+
+# Build outputs
+dist/
+build/
+.expo-shared/
+
+# OS
+Thumbs.db
+
+# Backup files
+*Old.tsx
+*Old.ts
+*.backup
