--- a/package.json
+++ b/package.json
@@ -10,42 +10,46 @@
     "lint": "eslint . --ext .ts,.tsx --quiet"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/drawer": "7.4.1",
     "@react-navigation/elements": "2.4.3",
     "@react-navigation/native": "7.1.10",
     "@react-navigation/stack": "7.3.3",
     "dayjs": "1.11.13",
-    "expo": "53.0.11",
-    "expo-blur": "14.1.5",
-    "expo-constants": "17.1.6",
-    "expo-haptics": "14.1.4",
-    "expo-linear-gradient": "14.1.5",
-    "expo-localization": "16.1.5",
-    "expo-modules-core": "2.4.0",
-    "expo-splash-screen": "0.30.9",
-    "expo-status-bar": "2.2.3",
+    "expo": "^54.0.30",
+    "expo-av": "~16.0.8",
+    "expo-blur": "~15.0.8",
+    "expo-constants": "~18.0.12",
+    "expo-haptics": "~15.0.8",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-localization": "~17.0.8",
+    "expo-modules-core": "~3.0.29",
+    "expo-splash-screen": "~31.0.13",
+    "expo-status-bar": "~3.0.9",
+    "firebase": "^12.7.0",
     "i18n-js": "4.5.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.3",
-    "react-native-gesture-handler": "~2.24.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
-    "react-native-pager-view": "6.7.1",
-    "react-native-reanimated": "3.17.5",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "4.11.1",
-    "react-native-web": "^0.20.0"
+    "react-native-pager-view": "6.9.1",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "^0.5.1"
   },
   "devDependencies": {
     "@babel/core": "7.27.4",
     "@react-native-community/eslint-config": "3.2.0",
     "@types/i18n-js": "3.8.9",
-    "@types/react": "~19.0.10",
+    "@types/react": "~19.1.10",
+    "@types/react-native": "^0.72.8",
     "eslint": "8.57.1",
-    "jest-expo": "53.0.7",
-    "typescript": "5.8.3"
+    "jest-expo": "~54.0.16",
+    "typescript": "~5.9.2"
   },
   "private": true,
   "jest": {
