--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ yarn.lock
 .env.development.local
 .env.test.local
 .env.production.local
+google-services.json
 
 # Firebase config - keep this if it has sensitive keys
 # src/services/firebase.ts
