--- a/package.json
+++ b/package.json
@@ -17,14 +17,13 @@
     "@react-navigation/native": "7.1.10",
     "@react-navigation/stack": "7.3.3",
     "dayjs": "1.11.13",
-    "expo": "^54.0.30",
+    "expo": "~54.0.31",
     "expo-av": "~16.0.8",
     "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.12",
     "expo-haptics": "~15.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-localization": "~17.0.8",
-    "expo-modules-core": "~3.0.29",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "firebase": "^12.7.0",
@@ -46,7 +45,6 @@
     "@react-native-community/eslint-config": "3.2.0",
     "@types/i18n-js": "3.8.9",
     "@types/react": "~19.1.10",
-    "@types/react-native": "^0.72.8",
     "eslint": "8.57.1",
     "jest-expo": "~54.0.16",
     "typescript": "~5.9.2"
